# gpxfun

./: .dockerignore  .gitignore  Dockerfile  README.md  analyzer_factory.py  app.py  app_data_functions.py  app_layout.py  calc_dist_matrix.py  cluster_it.py  command_line.py  custom_locations.py  get_weather.py  gpechse.py  infer_start_end.py  mylog.py  parse_gpx.py  plausi_single_route.py  plots.py  positions_from_distm.py  prepare_data.py  pyproject.toml  read_gpx_from_folder.py  requirements.txt  test.py  test_models.py  utilities.py
analyzer/: __init__.py  analyzemodel.py  baseanalyzer.py  lasso.py  lassocv.py  linear.py  svr.py  tree.py
assets/: my.css
callbacks/: __init__.py  choose_analyzer.py  showmap.py  statisticstable.py  update_dropdowns.py  update_progressbar.py  upload.py  violin.py
dash_app/: app_data_functions.py  app_layout.py  plots.py
gpxfun/: analyzer_factory.py  calc_dist_matrix.py  cluster_it.py  get_weather.py  infer_start_end.py  parse_gpx.py  prepare_data.py
tests/: test_calc_dist_matrix.py  test_callbacks.py  test_get_weather.py  test_mylog.py  test_utilities.py
utils/: mylog.py  utilities.py
