[tool.poetry]
name = "gpxfun"
version = "0.1.0"
description = "A plotly-dash app for analyzing gpx data of regular 🚲 routes"
authors = ["Dronakurl"]
license = "MIT License"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
]
[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
dash = {extras = ["testing"], version = "^2.9.3"}
pipdeptree = "^2.7.0"


[tool.black]
line-length = 120

[tool.pyright]
include = ["**/*.py"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "Archiv/**"
    , "data/**"
    , "fitbitdata/**"
    , "sessions/**"
]
ignore = ["**/__init__.py"]
typeCheckingMode = "off"
reportMissingTypeStubs = false
useLibraryCodeForTypes = false
pythonVersion = "3.11"
pythonPlatform = "Linux"

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.8.1"
pandas = "^2"
dash-bootstrap-components = "^1.4.0"
dash-bootstrap-templates = "^1.0.8"
tqdm = "^4.65.0"
similaritymeasures = "^0.7.0"
gpxpy = "^1.5.0"
timezonefinder = "^6.1.9"
meteostat = "^1.6.5"
colorlog = "^6.7.0"
gunicorn = "^20.1.0"
scikit-learn = "^1.2.2"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--import-mode=importlib",
    "-ra -q",
    "--disable-warnings",
    "--ignore=Archiv",
    "--ignore=test_models.py",
]
pythonpath = ["."]
# testpaths = [
#     "spider/test",
#     "imgclass/test",
#     "utils/test",
# ]
